--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -91,6 +91,7 @@ $this->headLink()->prependStylesheet('https://unpkg.com/swiper/swiper-bundle.css
         navigation: {
           nextEl: '.swiper-button-next',
           prevEl: '.swiper-button-prev',
-        }
+        },
+        themeColor: '#0a0a0a',
     });
   </script>
