--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -16,36 +16,48 @@ $button-color: $white;
 
 // SWIPER
 
-.resource.show #swiper {
+#swiper,
+#thumbnail-swiper {
 	width: 100%;
 }
 
-.swiper-container, .swiper-wrapper {
+.swiper-container,
+.swiper-wrapper {
 	z-index: auto !important;
 }
 
-.swiper-slide {
-	text-align: center;
-	font-size: 18px;
-	background: #fff;
-	
-	/* Center slide text vertically */
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	-webkit-align-items: center;
-	align-items: center;
+#thumbnail-swiper img {
+	@include thumbnail;
+	margin-top: 1rem;
+	cursor: pointer;
 }
 
-.swiper-zoom-container > img {
-	max-height: 40rem !important;
+.swiper-slide {
+text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+}
+
+.thumbs-slider img {
+	height: 5rem;
+}
+
+.swiper-zoom-container img {
+	height: 40rem !important;
 }
 
 .swiper-pagination-bullet-active {
