--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -20,33 +20,53 @@ $this->headLink()->prependStylesheet('https://unpkg.com/swiper/swiper-bundle.css
 
 <div class="grid-x">
 
-<?php if ($itemMedia): ?>
-<div id="swiper">
-    <!-- Slider main container -->
-    <div class="swiper-container">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
+    <?php if ($itemMedia): ?>
+    <div id="swiper">
+        <!-- Main Slider main container -->
+        <div class="swiper-container media-slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
 
-        <?php foreach ($itemMedia as $media): ?>
+            <?php foreach ($itemMedia as $media): ?>
 
-            <!-- Slides -->
-            <div class="swiper-slide">
-            	<div class="swiper-zoom-container">
-          			<img src="<?php echo $media->originalUrl(); ?>" alt=""/>
-          		</div>
-			</div>
+                <!-- Slides -->
+                <div class="swiper-slide">
+                	<div class="swiper-zoom-container">
+              			<img class="swiper-lazy" data-src="<?php echo $media->originalUrl();?>" alt=""/>
+              		</div>
+              		<div class="swiper-lazy-preloader"></div>
+    			</div>
 
-        <?php endforeach; ?>
+            <?php endforeach; ?>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
     </div>
-</div>
-<?php endif; ?>
+
+    <div id="thumbnail-swiper">
+        <!-- Main Slider main container -->
+        <div class="swiper-container thumbs-slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+
+            <?php foreach ($itemMedia as $media): ?>
+
+                <!-- Slides -->
+                <div class="swiper-slide">
+          			<img src="<?php echo $escape($media->thumbnailUrl('square')); ?>" alt=""/>
+    			</div>
+
+            <?php endforeach; ?>
+            </div>
+        </div>
+    </div>
+    <?php endif; ?>
+
 <div id="resource-values" class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php echo $item->displayValues(); ?>
@@ -82,7 +102,14 @@ $this->headLink()->prependStylesheet('https://unpkg.com/swiper/swiper-bundle.css
 </div>
 
 <script>
-    var swiper = new Swiper('.swiper-container', {
+    var thumbnailSwiper = new Swiper('.thumbs-slider', {
+        slidesPerView: 5,
+        spaceBetween: 30,
+        centerSlides: true,
+        pagination: false,
+    });
+
+    var swiper = new Swiper('.media-slider', {
         zoom: true,
         pagination: {
             el: '.swiper-pagination',
@@ -92,6 +119,12 @@ $this->headLink()->prependStylesheet('https://unpkg.com/swiper/swiper-bundle.css
           nextEl: '.swiper-button-next',
           prevEl: '.swiper-button-prev',
         },
-        themeColor: '#0a0a0a',
+     // Disable preloading of all images
+        preloadImages: false,
+        // Enable lazy loading
+        lazy: true,
+        thumbs: {
+            swiper: thumbnailSwiper
+          }
     });
   </script>
