--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -8,7 +8,7 @@
 $button-background: $secondary-color;
 $button-background-hover: $dark-gray;
 $button-color: $white;
-
+$dropdownmenu-arrow-color: $white;
 
 
 @import 'foundation-core';
@@ -27,6 +27,14 @@ $button-color: $white;
 	width: 100%;
 }
 
+#swiper {
+	height: 30rem;
+}
+
+#thumbnail-swiper {
+	height: 5rem;
+}
+
 .swiper-container,
 .swiper-wrapper {
 	z-index: auto !important;
@@ -34,36 +42,39 @@ $button-color: $white;
 
 #thumbnail-swiper img {
 	@include thumbnail;
-	margin-top: 1rem;
 	cursor: pointer;
 }
 
+#thumbnail-swiper .swiper-slide-thumb-active img {
+	box-shadow: 0 0 6px 1px rgba($primary-color, 0.5);
+}
+
+#swiper .swiper-container {
+	width: 100%;
+	height: 100%;
+}
+
+#thumbnail-swiper .swiper-container {
+	height: 100%;
+	width: 100%;
+	padding: 1rem;
+}
+
 .swiper-slide {
-text-align: center;
-      font-size: 18px;
-      background: #fff;
-
-      /* Center slide text vertically */
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      -webkit-align-items: center;
-      align-items: center;
+	text-align: center;
+	font-size: 18px;
+	background: $white;
 }
 
-.thumbs-slider img {
-	max-height: 5rem;
-}
-
-.swiper-zoom-container img {
-	height: 30rem !important;
+.swiper-slide img {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+	transform: translate(-50%, -50%);
+	position: absolute;
+	left: 50%;
+	top: 50%;
 }
 
 .swiper-pagination-bullet-active {
