--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -14,7 +14,7 @@ $dropdownmenu-arrow-color: $white;
 @import 'foundation-core';
 @import 'omeka';
 
-// SWIPER
+// ------ SWIPER
 
 @import 'swiper/swiper';
 @import 'swiper/components/lazy/lazy';
@@ -22,63 +22,23 @@ $dropdownmenu-arrow-color: $white;
 @import 'swiper/components/pagination/pagination';
 @import 'swiper/components/thumbs/thumbs';
 
-#swiper,
-#thumbnail-swiper {
+
+// ------ MEDIA SLIDER 
+
+.media-slider {
 	width: 100%;
 }
 
-#swiper {
-	height: 30rem;
+.swiper-lazy-loaded {
+	display: block;
+	max-height: 30rem;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-#thumbnail-swiper {
-	height: 5rem;
-}
-
-.swiper-container,
-.swiper-wrapper {
-	z-index: auto !important;
-}
-
-#thumbnail-swiper img {
-	@include thumbnail;
-	cursor: pointer;
-}
-
-#thumbnail-swiper .swiper-slide-thumb-active img {
-	box-shadow: 0 0 6px 1px rgba($primary-color, 0.5);
-}
-
-#swiper .swiper-container {
-	width: 100%;
-	height: 100%;
-}
-
-#thumbnail-swiper .swiper-container {
-	height: 100%;
-	width: 100%;
-	padding: 1rem;
-}
-
-.swiper-slide {
-	text-align: center;
-	font-size: 18px;
-	background: $white;
-}
-
-.swiper-slide img {
-	width: auto;
-	height: auto;
-	max-width: 100%;
-	max-height: 100%;
-	transform: translate(-50%, -50%);
-	position: absolute;
-	left: 50%;
-	top: 50%;
-}
 
 .swiper-pagination-bullet-active {
-	--swiper-pagination-color: #0a0a0a;
+	--swiper-pagination-color: #0a0a0a; // $primary-color not working here
 }
 
 .swiper-button-disabled {
@@ -87,6 +47,36 @@ $dropdownmenu-arrow-color: $white;
 
 .swiper-button-prev, .swiper-button-next {
 	--swiper-theme-color: $primary-color;
+}
+
+
+// ------ THUMB SLIDER
+
+.thumbs-slider {
+	width: 100%;
+	padding: 1rem;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.thumbs-slider .swiper-container{
+  width: 100%;
+}
+.thumbs-slider .swiper-wrapper {
+  width: 50%;
+}
+.thumbs-slider .swiper-slide {
+  text-align: center;
+  width: auto;
+}
+.thumbs-slider img {
+  max-height: 5rem;
+  @include thumbnail;
+  width: auto;
+}
+
+.thumbs-slider .swiper-slide-thumb-active img {
+	box-shadow: 0 0 6px 1px rgba($primary-color, 0.5);
 }
 
 // LINKS
