--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -22,6 +22,9 @@ $dropdownmenu-arrow-color: $white;
 @import 'swiper/components/pagination/pagination';
 @import 'swiper/components/thumbs/thumbs';
 
+.swiper-container, .swiper-wrapper {
+	z-index: 0 !important;
+}
 
 // ------ MEDIA SLIDER 
 
@@ -70,7 +73,7 @@ $dropdownmenu-arrow-color: $white;
   width: auto;
 }
 .thumbs-slider img {
-  max-height: 5rem;
+  max-height: 4rem;
   @include thumbnail;
   width: auto;
 }
