--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -19,32 +19,39 @@ $this->headScript()->appendFile($this->assetUrl('js/swiper-bundle.min.js'));
 
 <div class="grid-x">
 
-    <?php if ($itemMedia): ?>
-        <div class="swiper-container media-slider">
-            <div class="swiper-wrapper">
-            <?php foreach ($itemMedia as $media): ?>
-                <div class="swiper-slide">
-                	<div class="swiper-zoom-container">
-              			<img class="swiper-lazy" data-src="<?php echo $media->originalUrl();?>" alt="">
-              			<div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
-              		</div>
-    			</div>
-            <?php endforeach; ?>
-            </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+<?php if ($embedMedia && $itemMedia): ?>
+    <div class="swiper-container media-slider">
+        <div class="swiper-wrapper">
+        <?php foreach ($itemMedia as $media): ?>
+            <div class="swiper-slide">
+            	<div class="swiper-zoom-container">
+          			<img class="swiper-lazy" data-src="<?php echo $media->originalUrl();?>" alt="">
+          			<div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
+          		</div>
+			</div>
+        <?php endforeach; ?>
         </div>
-        <div class="swiper-container thumbs-slider">
-            <div class="swiper-wrapper">
-            <?php foreach ($itemMedia as $media): ?>
-                <div class="swiper-slide">
-          			<img src="<?php echo $escape($media->thumbnailUrl('square')); ?>" alt=""/>
-    			</div>
-            <?php endforeach; ?>
-            </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+    <div class="swiper-container thumbs-slider">
+        <div class="swiper-wrapper">
+        <?php foreach ($itemMedia as $media): ?>
+            <div class="swiper-slide">
+      			<img src="<?php echo $escape($media->thumbnailUrl('square')); ?>" alt=""/>
+			</div>
+        <?php endforeach; ?>
         </div>
-    <?php endif; ?>
+    </div>
+<?php endif; ?>
+
+<?php if (!$embedMedia && $itemMedia): ?>
+<div class="media-list">
+    <?php foreach ($itemMedia as $media): ?>
+        <?php echo $media->linkPretty(); ?>
+    <?php endforeach; ?>
+</div>
+<?php endif; ?>
 
 <div id="resource-values" class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
@@ -103,10 +110,11 @@ $this->headScript()->appendFile($this->assetUrl('js/swiper-bundle.min.js'));
     });
 
     var swiper = new Swiper('.media-slider', {
-        pagination: {
-            el: '.swiper-pagination',
-            clickable: true,
-        },
+		slidesPerView: 1,
+//         pagination: {
+//             el: '.swiper-pagination',
+//             clickable: true,
+//         },
         navigation: {
           nextEl: '.swiper-button-next',
           prevEl: '.swiper-button-prev',
