--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -60,21 +60,13 @@ $button-color: $white;
 	}
 	
 	& .lSPager {
-		padding: 5px; //FIXME
-			
+
 		& li {
-			border-radius : 5px;
-			padding: 3px;
-			box-shadow: 0 0 3px 1px rgba($light-gray, 0.5);
-			
-			&.active {
-				box-shadow: 0 0 6px 1px rgba($secondary-color, 0.5);
+			border-radius : 0 !important;
+			& img {
+				padding: 5px;
 			}
-			
-			&:hover {
-				box-shadow: 0 0 6px 1px rgba($primary-color, 0.5);
-			}
-		}	
+		}
 	}
 
 }
