--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -58,18 +58,17 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/lightgallery.css'));
     <?php endif; ?>
     </dl>
 
-	<dl>
 	<?php if (($this->siteSetting('show_attached_pages', true)) && ($sitePages = $item->sitePages($site->id()))): ?>
-		<div class="property">
-    		<dt><?php echo $translate('Site pages'); ?></dt>
-    		<div class="values">
+		<div class="site-pages">
+    		<h3><?php echo $translate('Site pages'); ?></h3>
+			<dl>
         		<?php foreach ($sitePages as $sitePage): ?>
         		<dd class="value"><?php echo $sitePage->link($sitePage->title()); ?></dd>
         		<?php endforeach; ?>
-    		</div>
+			</dl>
 		</div>
 	<?php endif; ?>
-	</dl>
+
 
     <?php
     $page = $this->params()->fromQuery('page', 1);
