Style site pages list

--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -79,7 +79,7 @@ $button-color: $white;
 // #. Content Links
 // ------------------
 
-#content .value a,
+#content .value > a,
 #content span a,
 #content .browse-controls > a,
 #content .preview-header > a{
