--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -61,11 +61,11 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/lightgallery.css'));
 	<?php if (($this->siteSetting('show_attached_pages', true)) && ($sitePages = $item->sitePages($site->id()))): ?>
 		<div class="site-pages">
 			<h3>À lire sur le site :</h3>
-			<dl>
+			<ul>
         		<?php foreach ($sitePages as $sitePage): ?>
-        		<dd class="value"><?php echo $sitePage->link($sitePage->title()); ?></dd>
+        		<li class="value"><h4><?php echo $sitePage->link($sitePage->title()); ?></h4></li>
         		<?php endforeach; ?>
-			</dl>
+			</ul>
 		</div>
 	<?php endif; ?>
 
