--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -98,6 +98,7 @@ $button-color: $white;
 
 #content .value a:hover,
 #content span a:hover,
+#content p > a:hover,
 #content .browse-controls a:hover,
 #content .preview-header a:hover,
 #content .preview-block a:hover,
