--- a/view/common/resource-values.phtml
+++ b/view/common/resource-values.phtml
@@ -2,6 +2,9 @@
 $translate = $this->plugin('translate');
 $escape = $this->plugin('escapeHtml');
 $labelInfo = $this->setting('property_label_information');
+$filterLocale = $this->themeSetting('filter_locale_values');
+$showLocale = $this->themeSetting('show_locale_label');
+$siteLang = $this->lang();
 ?>
 <dl>
 <?php foreach ($values as $term => $propertyData): ?>
@@ -22,6 +25,7 @@ $labelInfo = $this->setting('property_label_information');
         <?php foreach ($propertyData['values'] as $value): ?>
             <?php
             $valueType = $value->type();
+            $valueLang = $value->lang();
             $class = ['value'];
             if ('resource' == $valueType || strpos($valueType, 'resource') !== false) {
                 $class[] = 'resource';
@@ -33,12 +37,14 @@ $labelInfo = $this->setting('property_label_information');
                 $class[] = 'private';
             }
             ?>
+            <?php if (($filterLocale == 0) || ($valueLang == '') || ($valueLang == $siteLang)): ?>
             <dl class="<?php echo implode(' ', $class); ?>" lang="<?php echo $escape($value->lang()); ?>">
-                <?php if ($language = $value->lang()): ?>
-                <span class="language"><?php echo $language; ?></span>
+                <?php if (($showLocale == 1) && ($valueLang)): ?>
+                <span class="language"><?php echo $valueLang; ?></span>
                 <?php endif; ?>
                 <?php echo $value->asHtml(); ?>
             </dl>
+            <?php endif; ?>
         <?php endforeach; ?>
         </div>
     </div>
