--- a/view/common/resource-values.phtml
+++ b/view/common/resource-values.phtml
@@ -11,7 +11,7 @@ $siteLang = $this->lang();
     <div class="property">
         <dt>
         <?php if ($propertyData['alternate_label']): ?>
-        <?php echo $escape($propertyData['alternate_label']); ?>
+        <?php echo $escape($translate($propertyData['alternate_label'])); ?>
         <?php else: ?>
         <?php echo $escape($translate($propertyData['property']->label())); ?>
         <?php endif; ?>
