--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -65,17 +65,18 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/lightgallery.css'));
     <?php endif; ?>
     </dl>
 
-	<?php if (($this->siteSetting('show_attached_pages', true)) && ($sitePages = $item->sitePages($site->id()))): ?>
-		<div class="site-pages">
-			<h3>À lire sur le site :</h3>
-			<ul>
-        		<?php foreach ($sitePages as $sitePage): ?>
-        		<li class="value"><h4><?php echo $sitePage->link($sitePage->title()); ?></h4></li>
-        		<?php endforeach; ?>
-			</ul>
-		</div>
-	<?php endif; ?>
-
+	<dl>
+ 	<?php if (($this->siteSetting('show_attached_pages', true)) && ($sitePages = $item->sitePages($site->id()))): ?>
+ 		<div class="property">
+     		<dt><?php echo $translate('Site pages'); ?></dt>
+     		<div class="values">
+         		<?php foreach ($sitePages as $sitePage): ?>
+         		<dd class="value"><?php echo $sitePage->link($sitePage->title()); ?></dd>
+         		<?php endforeach; ?>
+     		</div>
+ 		</div>
+ 	<?php endif; ?>
+ 	</dl>
 
     <?php
     $page = $this->params()->fromQuery('page', 1);
