--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -157,16 +157,16 @@ body.vertical-menu #user-bar ~ #content {
   margin: $global-margin 0;
 }
 
-.dropdown.menu > li.is-dropdown-submenu-parent > a:after {
+.dropdown.menu > li.is-dropdown-submenu-parent.active > a:after {
   border-color: #fff transparent transparent;
   margin-right: .5 * $global-margin;
 }
 
-.dropdown.menu > li.is-dropdown-submenu-parent > a {
+.dropdown.menu > li.is-dropdown-submenu-parent.active > a {
   padding-right: 2 * $global-padding;
 }
 
-.dropdown.menu > li.is-dropdown-submenu-parent:hover > a {
+.dropdown.menu > li.is-dropdown-submenu-parent.active:hover > a {
   background-color: $primary-color;
   color: #fff;
 }
